--- a/third-stage/views/base/head.ejs
+++ b/third-stage/views/base/head.ejs
@@ -1,24 +1,32 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
-    <script src="/javascripts/jquery.js"></script>
-    <script src="/javascripts/bootstrap.js"></script>
-    <script src="/javascripts/layer.js"></script>
-    
 
-    <style>
-      .center{
-        width: 300px;
-        margin:0 auto
-      }
-      .button{
-        width:300px
-      }
-    </style>
-
-
-  </head>
-  <body>
+      <!DOCTYPE html>
+      <html lang="en">
+      <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>唯品会</title>
+        <link rel="stylesheet" href="/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/quadro/bootstrap.css">
+        <link rel="stylesheet" href="/stylesheets/quadro/mui/mui.min.css">
+        <link rel="stylesheet" href="/stylesheets/quadro/swiper/swiper.css">
+        <script src="/javascripts/quadro/iscroll/iscroll.js"></script>
+        <script src="/javascripts/quadro/mui/mui.js"></script>
+        <script src="/javascripts/quadro/swiper/swiper.js"></script>
+        <style>
+           *{
+            padding: 0;
+            margin: 0;
+          }
+          body{
+            font-size:10px;
+            padding: 0;
+            background:#fff
+          }
+         
+          li{
+            list-style:none
+          }
+        </style>
+      </head>
+      <body>
