--- a/third-stage/views/base/head.ejs
+++ b/third-stage/views/base/head.ejs
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/stylesheets/quadro/bootstrap.css">
         <link rel="stylesheet" href="/stylesheets/quadro/mui/mui.min.css">
         <link rel="stylesheet" href="/stylesheets/quadro/swiper/swiper.css">
+        <script src="/javascripts/quadro/jquery.js"></script>
         <script src="/javascripts/quadro/iscroll/iscroll.js"></script>
         <script src="/javascripts/quadro/mui/mui.js"></script>
         <script src="/javascripts/quadro/swiper/swiper.js"></script>
@@ -21,7 +22,7 @@
           body{
             font-size:10px;
             padding: 0;
-            background:#fff
+            /* background:#ccc */
           }
          
           li{
