--- a/third-stage/views/base/head.ejs
+++ b/third-stage/views/base/head.ejs
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>唯品会</title>
         <link rel="stylesheet" href="/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/quadro/css/font-awesome.css">    
         <link rel="stylesheet" href="/stylesheets/quadro/bootstrap.css">
         <link rel="stylesheet" href="/stylesheets/quadro/mui/mui.min.css">
         <link rel="stylesheet" href="/stylesheets/quadro/swiper/swiper.css">
