--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -1,106 +1,6 @@
-<style>
-    .nav{
-        width:100%;
-        height:8rem;
-        background:#FAFAF9
-    }
-    #login{
-        width:100%;
-        height:4rem;
-        display:flex;
-        justify-content:space-around;
-        align-items:center;
-    }
-    .nav1{
-        width:100%;
-        height:4rem;
-        display:flex;
-        justify-content:space-around;
-        align-items:center;
-    }
-    .login{
-        width:3rem;
-        height:2.3rem;
-        font-size:14px;
-        color:#AAACB0;
-    }
-    .search{
-        width:26rem;
-        height:3rem;
-        border-radius:7rem;
-        border:none;
-        outline:0;
-        font-size:15px;
-        padding:0 2rem;
-        border:1px solid #EDEDED;
-        background:#F3F4F5;
-        color:#C1C2C6;
-    }
-    .list{
-        width:2.5rem;
-        height:2.3rem;
-    }
-    .list img{
-        width:100%
-    }
-    .scrollBar{
-        width: 90%;
-        overflow: hidden;
-    }
-    .scrollBarItem{
-        width: 60rem;
-        height:4rem
-    }
-    .scrollBarItem ul{
-        padding: 0 0.5rem;
-        height: 4rem;
-    }
-    .scrollBarItem ul li{
-        height: 4rem;
-        width: 5em;
-        float: left;
-        line-height: 4rem; 
-        text-align: center;
-        font-size:13px;
-    }
-    .clear:after{
-        content: '';
-        display: block;
-        clear: both;
-    }
-    .fl{
-        float: left;
-    }
-    .fr{
-        float: right;
-    }
-    .nav-img-box{
-        width:10%;
-        height:4rem;
-        position: relative;
-        color: #7b7a7a;
-        text-align: center;
-    }
-    .fs12{
-        font-size: 30px;
-        line-height:4rem
-    }
-    .color-gray{
-        color: #999;
-    }
-    a{
-        color:#585C64
-    }
-    /* a:first-child{
-        color:#D34BA8
-    } */
-    .color{
-        color:#D34BA8
-    }
-    #active{
-        border-bottom:2px solid #D34BA8;
-    }
-</style>
+
+<link rel="stylesheet" href="/stylesheets/index/index.css">
+
 <div class="nav">
     <div id="login">
         <span class="login">登录</span>
@@ -123,8 +23,96 @@
                 </ul>
             </div>
         </div>
-        <div class="fr nav-img-box">
+        <div class="fr nav-img-box" id="angledown">
             <p class="fs12 color-gray"><i class="fa fa-angle-down"></i></p>
+        </div>
+        <!-- 导航出下拉列表 -->
+        <div class="select" id="angleup">
+            <div class="select1">
+                <span>精品推荐</span>
+                <span><i class="fa fa-angle-up"></i></span>
+            </div>
+            <div class="select1-goods">
+                <div class="select1-goods-desc">
+                    <div>
+                        <img src="/images/index/index.png" alt="">
+                        <p>今日推荐</p>
+                    </div>
+                    <div>
+                        <img src="/images/index/lastCrazy.png" alt="">
+                        <p>最后疯抢</p>
+                    </div>
+                    <div>
+                        <img src="/images/index/newbeauty.png" alt="">
+                        <p>美妆</p>
+                    </div>
+                    <div>
+                        <img src="/images/index/baby.png" alt="">
+                        <p>母婴</p>
+                    </div>
+                </div>
+                <div class="select1-goods-desc">
+                    <div>
+                        <img src="/images/index/intervational.png" alt="">
+                        <p>国际</p>
+                    </div>
+                    <div>
+                        <img src="/images/index/homeapp.png" alt="">
+                        <p>家电</p>
+                    </div>
+                    <div>
+                        <img src="/images/index/furniture.png" alt="">
+                        <p>家居</p>
+                    </div>
+                    <div>
+                        <img src="/images/index/life.png" alt="">
+                        <p>生活</p>
+                    </div>
+                </div>
+                <div class="select1-goods-desc" style="border:none">
+                    <div>
+                        <img src="/images/index/vipcostly.png" alt="">
+                        <p>唯品奢</p>
+                    </div>
+                    <div></div><div></div><div></div>
+                </div>
+
+            </div>
+            <div class="select1" style="border:none">
+                <span style="color:#585C64;font-size:12px">精品推荐</span>
+            </div>
+            <div class="select-more">
+                <div class="select-more-desc">
+                    <div>女装</div>
+                    <div>男装</div>
+                    <div>鞋包</div>
+                    <div>童装童鞋</div>
+                </div>
+                <div class="select-more-desc">
+                    <div>面部护肤</div>
+                    <div>手表配饰</div>
+                    <div>内衣</div>
+                    <div>运动户外</div>
+                </div>
+                <div class="select-more-desc">
+                    <div>护肤彩妆</div>
+                    <div>手机数码</div>
+                    <div>轻奢</div>
+                    <div>旗舰店</div>
+                </div>
+                <div class="select-more-desc">
+                    <div>国际</div>
+                    <div>母婴</div>
+                    <div>家居家纺</div>
+                    <div>大家电</div>
+                </div>
+                <div class="select-more-desc">
+                    <div>家具家装</div>
+                    <div>生活超市</div>
+                    <div>医药健康</div>
+                    <div>国际品牌</div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -133,4 +121,14 @@
      var myScroll1 = new IScroll('.scrollBar',{
             scrollX: true
         })
+
+        // 下拉列表的js
+        var angledown=document.querySelector('#angledown')
+        var angleup=document.querySelector('#angleup')
+        angledown.onclick=function(){
+            angleup.style.display='block'
+        }
+        angleup.onclick=function(){
+            angleup.style.display='none'
+        }
 </script>
