--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -1,12 +1,181 @@
+<style>
+    .nav{
+    width:100%;
+    height:8rem;
+    background:#FAFAF9
+}
+#login{
+    width:100%;
+    height:4rem;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+}
+.nav1{
+    width:100%;
+    height:4rem;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+}
+.login{
+    width:3rem;
+    height:2.3rem;
+    font-size:14px;
+    color:#AAACB0;
+}
+.search{
+    width:26rem;
+    height:3rem;
+    border-radius:7rem;
+    border:none;
+    outline:0;
+    font-size:15px;
+    padding:0 2rem;
+    border:1px solid #EDEDED;
+    background:#F3F4F5;
+    color:#C1C2C6;
+}
+.list{
+    width:2.5rem;
+    height:2.3rem;
+}
+.list img{
+    width:100%
+}
+.scrollBar{
+    width: 90%;
+    overflow: hidden;
+}
+.scrollBarItem{
+    width: 60rem;
+    height:4rem
+}
+.scrollBarItem ul{
+    padding: 0 0.5rem;
+    height: 4rem;
+}
+.scrollBarItem ul li{
+    height: 4rem;
+    width: 5em;
+    float: left;
+    line-height: 4rem; 
+    text-align: center;
+    font-size:13px;
+}
+.clear:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+.fl{
+    float: left;
+}
+.fr{
+    float: right;
+}
+.nav-img-box{
+    width:10%;
+    height:4rem;
+    position: relative;
+    color: #7b7a7a;
+    text-align: center;
+}
+.fs12{
+    font-size: 30px;
+    line-height:4rem
+}
+.color-gray{
+    color: #999;
+}
+a{
+    color:#585C64
+}
+.color{
+    color:#D34BA8
+}
+#active{
+    border-bottom:2px solid #D34BA8;
+}
+#index{
+    width:100%
+}
+.select{
+    position:absolute;
+    top:4rem;
+    width:100%; 
+    height:100%;
+    background:#fff;
+    color:#585C64;
+    display:none;
+}
+.select1{
+    height:4rem;
+    border-bottom:1px solid #EDEDED;
+    padding:0 1rem;
+    line-height:4rem;
+    display:flex;
+    justify-content:space-between;
+    color:#585C64
+}
+.select1 span:nth-of-type(1){
+    font-size:13px;
+}
+.select1 span:nth-of-type(2){
+    font-size:25px;
+}
+.select1-goods{
+    height:24rem;
+}
+.select1-goods-desc{
+    height:8rem;
+    border-bottom:1px solid #EDEDED;
+    display:flex;
+    justify-content: space-around;
+    align-items:center
+}
+.select1-goods-desc div{
+    width:20%;
+    height:6rem;
+    text-align:center;
+}
+.select1-goods-desc img{
+    width:2rem;
+    height:2rem;
+    margin-top: 1.2rem;
+    margin-bottom: 0.7rem;
+    background:green
+}
+.select1-goods-desc p{
+    font-size:12px;
+}
+.select-more{
+    height:20rem;
+}
+.select-more-desc{
+    height:5rem;
+    display:flex;
+    justify-content:space-around;
+}
+.select-more-desc div{
+    width:20%;
+    height:4rem;
+    text-align:center;
+    line-height:4rem;
+    border-radius:0.4rem;
+    background:#F3F4F5;
+    color:#585C64;
+    font-size:12px
+}
 
-<link rel="stylesheet" href="/stylesheets/index/index.css">
-
+</style>
 <div class="nav">
     <div id="login">
         <span class="login">登录</span>
         <input class="search" placeholder="大家正在搜：护肤套装">
         <span class="list"><img src="/images/index/list1.png"></span>
     </div>
+    <!-- 搜索下方导航栏 -->
     <div class="clear nav1">
         <div class="scrollBar fl">
             <div class="scrollBarItem">
@@ -27,7 +196,7 @@
             <p class="fs12 color-gray"><i class="fa fa-angle-down"></i></p>
         </div>
         <!-- 导航出下拉列表 -->
-        <div class="select" id="angleup">
+        <div class="select" id="angleup" style="z-index: 2;">
             <div class="select1">
                 <span>精品推荐</span>
                 <span><i class="fa fa-angle-up"></i></span>
