修改首页界面

--- a/third-stage/views/index.ejs
+++ b/third-stage/views/index.ejs
@@ -1,8 +1,159 @@
 <% include base/head.ejs%>
     <% include base/nav.ejs%>
-
-   
-
+<link rel="stylesheet" href="/stylesheets/index/index.css">
+    <!-- 今日推荐 -->
+<div id="index">
+    <div class="vip">
+        <img src="/images/index/vip.jpg" alt="">
+    </div>
+    <div class="vip-goods">
+        <div class="vip-goods-desc">
+            <img src="/images/index/vipgoods1 (1).jpg" alt="">
+        </div>
+        <div class="vip-goods-desc">
+            <img src="/images/index/vipgoods1 (2).jpg" alt="">
+        </div>
+        <div class="vip-goods-desc">
+            <img src="/images/index/vipgoods1 (3).jpg" alt="">
+        </div>
+    </div>
+    <div class="index-list clear">
+        <div class="index-desc clear">
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList1.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList2.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList3.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList4.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList5.gif" alt="">
+            </div>
+        </div>
+        <div class="index-desc clear">
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList6.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList7.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList8.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList9.png" alt="">
+            </div>
+            <div class="index-desc-list clear">
+                <div class="cirle-white"></div>
+                <img width="100%" src="/images/index/indexList10.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- 唯品快抢 -->
+    <div class="fastbuy">
+        <div class="fastbuy-top">
+            <p class="fastbuy-desc1"><span style="color:#DE3E97">唯品快抢</span>.品质好物 天天特价</p>
+            <p class="fastbuy-desc2">美好生活抢先到<i class="fa fa-angle-right" style="margin-left: 0.5rem;"></i></p>
+        </div>
+        <div class="fastbuy-bottom">
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (1).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (2).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (3).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (4).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+        </div>
+    </div>
+    <!-- 最后疯抢 -->
+    <div class="fastbuy">
+        <div class="fastbuy-top">
+            <p class="fastbuy-desc1"><span style="color:#DE3E97">唯品快抢</span>.品质好物 天天特价</p>
+            <p class="fastbuy-desc2">美好生活抢先到<i class="fa fa-angle-right" style="margin-left: 0.5rem;"></i></p>
+        </div>
+        <div class="fastbuy-bottom">
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (1).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (2).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (3).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+            <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/index/fastbuy (4).jpg" alt="">
+                </div>
+                <div>
+                    <img width="100%" src="/images/index/zmc.png" alt="">
+                </div>
+                <p>58</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
