添加登录链接

--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -173,7 +173,7 @@ a{
 </style>
 <div class="nav">
     <div id="login">
-        <span class="login">登录</span>
+        <a href="/login"><span class="login">登录</span></a>
         <input class="search" placeholder="大家正在搜：护肤套装">
         <span class="list"><img src="/images/index/list1.png"></span>
     </div>
