--- a/third-stage/views/user.ejs
+++ b/third-stage/views/user.ejs
@@ -335,33 +335,5 @@
 <div id="J-wx-share">
     <input type="hidden" id="J-share-switch" value="">
 </div>
-<!-- 页脚下载条 -->
-<!-- <div id="J-foot-download">
-    <a href="javascript:;" class="footer-download">
-        <div class="download-text">
-            <span class="logo-bg">唯品会</span>
-            <p>唯品会客户端，特卖抢不停</p>
-        </div>
-        <div class="download-btn">
-            <span>下载</span>
-        </div>
-    </a>
-</div> -->
-<!--页脚copyright信息-->
-<!-- <div id="J-page-footer">
-    <div class="wap-footer">
-        <div class="footer-nav">
-            <a href="//m.vip.com/index.html" mars_sead="footer-index_btn" class="vip-index">唯品会首页</a>
-            <a href="//viva.vip.com/act/m/staic-page-about?wapid=vivac_314" class="vip-about">关于我们</a>
-            <a href="//m.vip.com/user.html" mars_sead="footer-users_btn">个人中心</a>
-        </div>
-        <p class="copyright">Copyright © 2008-2017 m.vip.com, All Rights Reserved 粤ICP备08114786号</p>
-        <div class="psb">
-            <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44010302000068">
-                <i class="psb-sign"></i>
-                <p>粤公网安备 44010302000068号</p>
-            </a>
-        </div>
-    </div>
-</div> -->
+<% include base/bottom.ejs %>
     <% include base/foot.ejs %>
