修改返回手机号登录页面链接

--- a/third-stage/views/login_user.ejs
+++ b/third-stage/views/login_user.ejs
@@ -146,6 +146,6 @@
     <div class="huo">或</div>
     <div class="hr2"></div>
 </div>
-<div class="zhuce"><a href="index/login">手机注册登录</a></div>
+<div class="zhuce"><a href="/shop/login">手机注册登录</a></div>
 <!-- <script src="/javascripts/ajax/login.js"></script> -->
 <% include base/foot.ejs %>
