--- a/third-stage/public/stylesheets/homeapp/homeapp.css
+++ b/third-stage/public/stylesheets/homeapp/homeapp.css
@@ -1,6 +1,8 @@
 .container{
     padding:0;
-    height:250rem;
+}
+a{
+    display:block;
 }
 .swiperbox{
     display:flex;
@@ -38,14 +40,130 @@
     width:20%;
 }
 /* 精彩活动 */
-.sectionlist-Wdfact{
-   height:30rem;
-}
 .flex{
     display:flex;
     flex-wrap:wrap;
 }
 /* 唯品快抢 */
-.sectionlist-homeapp{
-
+.sectionlist-homeapp {
+    display:flex;
+    justify-content: center;
+    position:relative;
+    width:100%;
+}
+.sectionlist-homeappnavbox{
+   width:96%;
+   position: absolute;
+   top:30%;
+   display:flex;
+   justify-content:space-between;
+}
+.sectionlist-homeappnav{
+    width:24%;
+}
+.sectionlist-homeappnav-logo{
+    width:100%;
+    height:20%;
+    display:flex;
+    justify-content:center;
+}
+.sectionlist-homeappnav-text{
+    width:80%;
+    font-size:1.2rem;
+    color:rgb(222, 61, 150);
+    font-weight:700;
+    display:flex;
+}
+.logodesc{
+    flex:1;
+    background-color:rgb(222, 61, 150);
+    text-align:center;
+    font-size:1rem;
+    color: rgb(255, 255, 255);
+    font-weight:500;
+    height:1.8rem;
+    line-height:1.8rem;
+}
+.logoprice{
+    flex:1
+}
+/* 超值爆款 */
+.section-superhotbox{
+    width:100%;
+}
+.sectionlist-flagship-eglistbox{
+    width:100%;
+}
+.sectionlist-flagship-eglistnavbox{
+    width:100%;
+    display:flex;
+}
+.sectionlist-flagship-eglistnav{
+    width: 25%;
+}
+.sectionlist-flagship-eglistnav>img{
+    width: 100%;
+}
+/* 具体店铺 */
+.opennew{
+    width:95%;
+    background:#fff;
+    margin:0 auto;
+    margin-top:1rem;
+    margin-bottom:1rem;
+    border-radius:1rem;
+    overflow:hidden;
+}
+.opennew-top{
+    height:75%;
+}
+.opennew-goodsname{
+    float:left;
+    margin:0;
+    font-size:13px;
+    color:#000;
+    font-weight:600;
+    width:70%;
+    margin-left:2rem;
+}
+.opennew-price,.opennew-goodsname{
+    padding:0 0.8rem 0 1rem;
+    margin-top:1rem;
+}
+.opnenew-price{
+    font-size:12px;
+    padding:0 0.8rem 0 1rem;
+}
+.color{
+    color:rgb(222, 61, 150)
+}
+/* 精选爆款 */
+.sectionlist-hot-navbox{
+    width:100%;
+    position: relative;
+}
+.sectionlist-hot-navlist{
+    width:95%;
+    position: absolute;
+    top:0;
+    left:2.5%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+} 
+.sectionlist-hot-nav{
+    width:24.5%;
+    height:48%;
+    background:#fff;
+    margin-bottom:0.3rem;
+}
+.hotlistimg{
+    width:100%;
+    height:100%;
+}
+.hotlistdesc{
+    color:#333;
+    font-size:1.2rem;
+    text-align:center;
+    margin-bottom:0;
 }
